fixed spacing on Today page and on growth page but our values still not sticky

--- a/src/component/AboutPage/OurMissionSection/style.css
+++ b/src/component/AboutPage/OurMissionSection/style.css
@@ -33,6 +33,7 @@
 }
 
 .mission-header-space {
+  position: sticky;
   height: max(120px, 20vh);
 }
 
